tag customer apps and expose through api
